--- a/twitter-sentiment/client/main.html
+++ b/twitter-sentiment/client/main.html
@@ -1,8 +1,25 @@
 <head>
   <title>twitter-sentiment</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <my-app></my-app>
-</body>
 
+  <script>window.twttr = (function(d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0],
+	  t = window.twttr || {};
+	if (d.getElementById(id)) return t;
+	js = d.createElement(s);
+	js.id = id;
+	js.src = "https://platform.twitter.com/widgets.js";
+	fjs.parentNode.insertBefore(js, fjs);
+  
+	t._e = [];
+	t.ready = function(f) {
+	  t._e.push(f);
+	};
+  
+	return t;
+  }(document, "script", "twitter-wjs"));</script>
+</body>
