--- a/twitter-sentiment/client/main.html
+++ b/twitter-sentiment/client/main.html
@@ -3,7 +3,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-app-background">
   <my-app></my-app>
 
   <script>window.twttr = (function(d, s, id) {
