separate app in to components and get google sentiments api working

--- a/twitter-sentiment/client/main.html
+++ b/twitter-sentiment/client/main.html
@@ -1,6 +1,7 @@
 <head>
-  <title>twitter-sentiment</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<base href="/">
+	<title>twitter-sentiment</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="mat-app-background">
